k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workquora
  labels:
    environment: production
