k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workquora-backend-svc
  namespace: workquora
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: workquora-backend
  type: ClusterIP
