k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workquora-ingress
  namespace: workquora
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: api.workquora.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workquora-backend-svc
                port:
                  number: 3000
