k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workquora-net-policy
  namespace: workquora
spec:
  podSelector:
    matchLabels:
      app: workquora-backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: workquora
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
